plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'sorim.f1.slasher'
version = ''
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.7'
	implementation 'org.springframework.security:spring-security-test:5.5.1'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.7'

	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.7'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.8.0'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
	implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.11.1'
	implementation group: 'org.mnode.ical4j', name: 'ical4j', version: '4.0.0-alpha9'
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
	implementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.50.0'
	implementation group: 'com.github.instagram4j', name: 'instagram4j', version: '2.0.7'
	implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '5.0.0-alpha.3'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp-urlconnection', version: '5.0.0-alpha.3'
	implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.1'
	implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.7.0'
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'

}

test {
	useJUnitPlatform()
}
